# libambxlight

./: README.md
app/: ambxtest.c
applications/: Makefile  ambxtest.c
driver/: Makefile  ambxlight.c  ambxlight_params.h  core.c  detect_ambxlight.c  proc.c  proc.h  proc_light_color.c  proc_light_color.h  property.h  usb-skeleton.c
driver/test/: Makefile  ambx.conf  ambxtest.c  connection.c  input.c  parseconf.c  xwin.c
driver/udev/: 90-ambxlight.rules
include/: ambxlight.h  ambxlight_device.h  ambxlight_ioctl.h  ambxlight_params.h  libambx.h  libambxlight.h
include/libambxlight/: ambxlight.h  ambxlight_ioctl.h  libambxlight.h  version.h
lib/: Makefile  Makefile.am  Makefile.in  config.h.in  configure  configure.in  libambx.c  libambxlight.c
wireshark/plugins/: ambxlight.lua
